# Serving_Robot

./: README.md  구동 순서도.txt
SetRobot/launch/: SetRobot.launch
SetRobot/param/: target_pose.yaml
SetRobot/src/: robot_main.cpp  robot_masterpc.cpp  server.cpp
mca_pr2/: CMakeLists.txt  package.xml
mca_pr2/mca_pr2/: CMakeList.txt  package.xml
mca_pr2/mca_pr2_bringup/launch/: mca_pr2_robot.launch
mca_pr2/mca_pr2_description/: CMakeLists.txt
mca_pr2/mca_pr2_description/urdf/: mca_pr2.urdf.xacro
mca_pr2/mca_pr2_navigation/: package.xml
mca_pr2/mca_pr2_navigation/param/: local_costmap_params.yaml
mca_pr2/mca_pr2_slam/: CMakeList.txt  mca_pr2.lua
mca_pr2/mca_pr2_slam/launch/: mca_pr2_slam.launch
mca_pr2/mca_pr2_slam/lua/: mca_pr2.lua
mca_pr2/mca_pr2_slam/rviz/: mca_pr2_cartographer.rviz
mca_pr2/mca_pr2_teleop/: CMakeList.txt  package.xml  setup.py
mca_pr2_amcl/: CMakeLists.txt  package.xml
mca_pr2_amcl/examples/: amcl_diff.launch  amcl_diff_tuning.launch
mca_pr2_amcl/launch/: amcl.launch
mca_pr2_amcl/src/: amcl_node.cpp
mca_pr2_bringup/: CMakeLists.txt  package.xml
mca_pr2_bringup/launch/: mca_pr2_core.launch  mca_pr2_lidar.launch  mca_pr2_model.launch  mca_pr2_remote.launch  mca_pr2_robot.launch
mca_pr2_bringup/launch/includes/: description.launch.xml
mca_pr2_description/: package.xml
mca_pr2_description/meshes/bases/: pr2_base.stl
mca_pr2_description/meshes/wheels/: left_tire.stl  right_tire.stl
mca_pr2_description/urdf/: mca_pr2.urdf.xacro
mca_pr2_gazebo/: CMakeLists.txt  package.xml
mca_pr2_gazebo/include/: turtlebot3_drive.h
mca_pr2_gazebo/launch/: mca_pr2_turtlebot3_world.launch
mca_pr2_gazebo/models/mca_pr2/: model-1_4.sdf  model.config  model.sdf
mca_pr2_gazebo/rviz/: mca_pr2_gazebo_model.rviz
mca_pr2_gazebo/src/: turtlebot3_drive.cpp
mca_pr2_navigation/: CMakeList.txt  CMakeLists.txt  package.xml
mca_pr2_navigation/config/: scan_filter_chain.yaml
mca_pr2_navigation/launch/: amcl.launch  mca_pr2_navigation.launch  move_base.launch
mca_pr2_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
mca_pr2_navigation/src/: auto_clear_costmap_node.cpp
mca_pr2_set/: CMakeLists.txt  package.xml
mca_pr2_set/launch/: SetRobot.launch
mca_pr2_set/param/: target_pose.yaml
mca_pr2_set/src/: robot_expo.cpp  robot_main.cpp  robot_masterpc.cpp  robot_masterpc2.cpp  robot_service.cpp  robot_setpose.cpp  robot_setpose2.cpp
mca_pr2_slam/: CMakeLists.txt  package.xml
mca_pr2_slam/config/: scan_data_filter.yaml
mca_pr2_slam/launch/: mca_pr2_cartographer.launch  mca_pr2_gmapping.launch  mca_pr2_slam.launch
mca_pr2_slam/rviz/: mca_pr2_cartographer.rviz  mca_pr2_gmapping.rviz
mca_pr2_teleop/: CMakeList.txt  package.xml  setup.py
mca_pr2_teleop/launch/: mca_pr2_teleop_key.launch
mca_pr2_teleop/nodes/: mca_pr2_teleop_key
server/: server.cpp  server_8080.cpp  server_8081.cpp
