<?xml version="1.0"?>
<package format="2">
  <name>mca_pr2</name>
  <version>0.0.1</version>
  <description>
    pr2 robot meta package.
  </description>
  <license>Apache 2.0</license>
  <author email="as379907as@gmail.com">Hyun</author>
  <maintainer email="as379907as@gmail.com">Hyun</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>mca_pr2_bringup</exec_depend>
  <exec_depend>mca_pr2_description</exec_depend>
  <exec_depend>mca_pr2_amcl</exec_depend>
  <exec_depend>mca_pr2_navigation</exec_depend>
  <exec_depend>mca_pr2_slam</exec_depend>
  <exec_depend>mca_pr2_teleop</exec_depend>
  <exec_depend>mca_pr2_set</exec_depend>
  <export><metapackage/></export>
</package>