<?xml version="1.0"?>
<package format="2">
  <name>MCA_pr2</name>
  <version>0.0.1</version>
  <description>
    MCA pr2 robot meta package
  </description>
  <license>Apache 2.0</license>
  <author email="as379907as@gmail.com">Hyun</author>
  <maintainer email="as379907as@gmail.com">Hyun</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>omo_r1_bringup</exec_depend>
  <exec_depend>omo_r1_description</exec_depend>
  <exec_depend>omo_r1_gazebo</exec_depend>
  <exec_depend>omo_r1_navigation</exec_depend>
  <exec_depend>omo_r1_slam</exec_depend>
  <exec_depend>mca_pr2_teleop</exec_depend>
  <export><metapackage/></export>
</package>